# DAA_Project_Railway_Platform_Optimization

./: .gitignore  CMakeLists.txt  CSVReader.cpp  CSVReader.h  MinHeap.cpp  PlatformAllocator.cpp  PlatformAllocator.h  Train.cpp  a.py  b.py  main.cpp  train_schedule.csv  trains.csv
include/: CSVReader.h  MinHeap.h  PlatformAllocator.h  SimulationUI.h  Train.h
src/: CSVReader.cpp  MinHeap.cpp  PlatformAllocator.cpp  Simulation.cpp  Train.cpp  main.cpp
